# developer-roadmap

./: README.md
languages/go/: README.md
languages/javascript/: README.md
languages/javascript/0.setup/: setup.md
languages/javascript/1.introduction/: related-concept.md
languages/php/: README.md
languages/python/: README.md
languages/rust/: README.md
projects/python/10.fastapi-transaction/: .env-template  Makefile  README.md  pyproject.toml  requirements.txt
projects/python/10.fastapi-transaction/alembic/: env.py
projects/python/10.fastapi-transaction/app/: main.py  seed.py
projects/python/10.fastapi-transaction/app/core/: config.py  database.py  deps.py  errors.py  security.py
projects/python/10.fastapi-transaction/app/models/: order.py  order_item.py  product.py  token.py  user.py
projects/python/10.fastapi-transaction/app/routers/: auth.py  orders.py  products.py  reports.py  users.py
projects/python/10.fastapi-transaction/app/schemas/: auth.py  order.py  product.py  user.py
projects/python/10.fastapi-transaction/app/services/: auth_service.py  order_service.py  report_service.py
projects/python/10.fastapi-transaction/tests/: conftest.py  helpers.py  test_errors.py  test_orders.py
role-based-roadmaps/backend/: README.md
role-based-roadmaps/frontend/: README.md
role-based-roadmaps/full-stack/: README.md
skill-based-roadmaps/ai-agents/: README.md
skill-based-roadmaps/git-github/: README.md
skill-based-roadmaps/linux/: README.md
skill-based-roadmaps/prompt-engineering/: README.md
skill-based-roadmaps/wordpress/: README.md
(+511 files in other folders)
